# Torque3D

./: CMakeLists.txt
Engine/lib/openal-soft/: CMakeLists.txt
Tools/CMake/: basics.cmake  torque3d.cmake
